--- a/front-end/red-acelerografos/src/index.html
+++ b/front-end/red-acelerografos/src/index.html
@@ -13,6 +13,7 @@
     <!--     Fonts and icons     -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700,300|Material+Icons' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Anton|Montserrat:900|Open+Sans|Roboto|Ubuntu" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCv-FSw73gLN9cfTBECg3VQ1vnkqAPnCHQ"></script>
 
